[package]
name = "kompression"
version = "0.1.0"
authors = ["Kevin Oberlies <favilo@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitvec = "0.22.3"
env_logger = "0.8.3"
funty = "1.1.0"
log = "0.4.14"
quickcheck = { version = "1.0.3", default-features = false, features = ["regex"] }
quickcheck_macros = "1.0.0"
radix_trie = "0.2.1"
thiserror = "1.0.25"

[dev-dependencies]
anyhow = "1.0.40"
